--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "trivia-questions",
   "version": "0.0.0",
+  "homepage": "https://abdoarafh.github.io/articles-website-reactjs/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "pnpm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@babel/core": ">=7.12.10 <8.0.0",
@@ -12,6 +15,7 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
+    "gh-pages": "^3.2.3",
     "sass": "^1.48.0",
     "vite": "^2.7.2"
   }
